[gd_scene load_steps=4 format=3 uid="uid://67ghl6x0il8n"]

[ext_resource type="Texture2D" uid="uid://dphefy5h6qh4n" path="res://assets/images/bg/hallway.png" id="1_3ys3m"]
[ext_resource type="Script" path="res://scenes/areas/hallway.gd" id="1_xr127"]
[ext_resource type="PackedScene" uid="uid://doa3baqaprvkj" path="res://scenes/components/click_area_component.tscn" id="3_6nv3q"]

[node name="Hallway" type="Node2D"]
script = ExtResource("1_xr127")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 144.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Background"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 144.0
texture = ExtResource("1_3ys3m")
stretch_mode = 5

[node name="ToRoom" parent="." node_paths=PackedStringArray("collision_polygon") instance=ExtResource("3_6nv3q")]
label_name = "Room"
collision_polygon = NodePath("CollisionPolygon2D")
cursor_look = 3
transfer_area = "res://scenes/areas/bedroom_front.tscn"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ToRoom"]
polygon = PackedVector2Array(178, 32, 208, 18, 208, 144, 177, 144)

[node name="DoorLeftInteract" parent="." node_paths=PackedStringArray("collision_polygon") instance=ExtResource("3_6nv3q")]
label_name = "Door"
collision_polygon = NodePath("CollisionPolygon2D")
cursor_look = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DoorLeftInteract"]
polygon = PackedVector2Array(57, 41, 69, 46, 70, 112, 57, 124)

[node name="DoorRightInteract" parent="." node_paths=PackedStringArray("collision_polygon") instance=ExtResource("3_6nv3q")]
position = Vector2(58, 5)
label_name = "Door"
collision_polygon = NodePath("CollisionPolygon2D")
cursor_look = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DoorRightInteract"]
polygon = PackedVector2Array(70, 41, 75, 36, 75, 116, 70, 104)

[node name="DoorHallway" parent="." node_paths=PackedStringArray("collision_polygon") instance=ExtResource("3_6nv3q")]
position = Vector2(58, 5)
label_name = "Hall"
collision_polygon = NodePath("CollisionPolygon2D")
cursor_look = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DoorHallway"]
position = Vector2(-17, 12)
polygon = PackedVector2Array(68, 45, 73, 45, 73, 55, 68, 55)

[connection signal="input_detected" from="ToRoom" to="." method="_on_to_room_input_detected"]
[connection signal="input_detected" from="DoorLeftInteract" to="." method="_on_door_left_interact_input_detected"]
[connection signal="input_detected" from="DoorRightInteract" to="." method="_on_door_right_interact_input_detected"]
[connection signal="input_detected" from="DoorHallway" to="." method="_on_door_hallway_input_detected"]
